# comptext-codex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BRANCH_SYNC_DETAILS.md  BUNDLE_USAGE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLES.md  EXAMPLES.md  PR_MAPPING_ANALYSIS.md  PR_SYNC_REPORT.md  QUICKSTART_PR_SYNC.md  QUICK_START.md  README.md  SECURITY.md  SUMMARY.md  TOKEN_REDUCTION_RESULTS.md  pr-sync-bundle.bundle  pyproject.toml  requirements.txt  setup.cfg  setup.py  sync_pr_branches.sh  vercel.json
.github/agents/: my-agent.agent.md
.github/workflows/: build-codex-bundle.yml  ci.yml  codex-pr-check.yml  tests.yml
codex/: EXAMPLE_CATALOG.md  MODULE_CATALOG.md  README.md  commands.yaml  modules.yaml  profiles.yaml
codex/commands/: A11Y.yaml  ACTION.yaml  AGENT.yaml  ALERT.yaml  ALG_RSA256.yaml  ANAL.yaml  ANALYZE.yaml  ANIM.yaml  API.yaml  APID.yaml  ASRT_EQ.yaml  ASRT_EXCP.yaml  ASRT_GT.yaml  ASRT_LT.yaml  ASRT_NEQ.yaml  AUD_DEV.yaml  AUD_MGT.yaml  AUD_TECH.yaml  AUD_USR.yaml  AUTH.yaml  AUTH_MTH_JWT.yaml  AUTH_MTH_MFA.yaml  AUTH_MTH_OA2.yaml  AUTH_MTH_SAML.yaml  BRKP_ALL.yaml  BRKP_DESK.yaml  BRKP_MOB.yaml  BRKP_TAB.yaml  BTCH.yaml  BUILD.yaml  CACHE.yaml  CACHE_CHECK.yaml  CACHE_DEPEND.yaml  CACHE_ENABLE.yaml  CACHE_INVAL.yaml  CACHE_REDIS.yaml  CACHE_STORE.yaml  CACHE_WARMUP.yaml  CALL.yaml  CELEBRATE.yaml  (+329 more)
codex/modules/: A_MODUL_A_ALLGEMEINE_BEFEHLE_FORMATIERUNG.yaml  B_MODUL_B_PROGRAMMIER_DATENVERARBEITUNG.yaml  C_MODUL_C_VISUALISIERUNG_GRAFIK.yaml  D_MODUL_D_ERWEITERTE_KI_STEUERUNG.yaml  E_MODUL_E_DATENANALYSE_MACHINE_LEARNING.yaml  F_MODUL_F_DOKUMENTATION_REPORTING.yaml  G_MODUL_G_TESTING_QUALITY_ASSURANCE.yaml  H_MODUL_H_DATABASE_DATA_MODELING.yaml  I_MODUL_I_SECURITY_COMPLIANCE.yaml  J_MODUL_J_DEVOPS_DEPLOYMENT.yaml  K_MODUL_K_FRONTEND_UI_DEVELOPMENT.yaml  L_MODUL_L_DATA_PIPELINES_ETL.yaml  M_MODUL_M_MCP_INTEGRATION_SERVER.yaml  N_MODUL_N_AI_AGENTS_ORCHESTRATION.yaml  O_MODUL_O_P_ENTERPRISE_FEATURES_V3_7_0.yaml  P_MODUL_O_P_ENTERPRISE_FEATURES_V3_7_0.yaml  Q_TEST_SUITE_MODUL_Q_REASONING.yaml  R_MODUL_R_MULTIMODAL_PROCESSING.yaml  analysis.yaml
codex/profiles/: .gitkeep  MCP_MIN_SCOPE.yaml  SEC_ENTERPRISE.yaml
comptext/: __init__.py  cli.py  executor.py  parser.py  utils.py
comptext/modules/: __init__.py  ai_control.py  general.py  programming.py  visualization.py
comptext_mcp/: server.py
data/: CompText-Codex.csv
grammar/: comptext.ebnf
mcp_loader/: loader.py
public/: health.html  index.html
schemas/: bundle.schema.json  command.schema.json  command_schema.json  commands.schema.json  module.schema.json  module_schema.json  modules.schema.json  profile.schema.json  profile_schema.json  profiles.schema.json
scripts/: build_bundle.py  test_token_reduction.py  validate_codex.py
src/comptext_codex/: __init__.py  catalog.py  cli.py  parser.py  registry.py  token_reduction.py  token_report.py
tests/: conftest.py  test_cli.py  test_parser.py  test_token_reduction.py  test_token_report.py
