[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comptext-codex"
version = "1.0.0"
description = "Python library for parsing and working with CompText DSL - Token-efficient language for LLM interactions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CompText Team", email = "team@comptext.dev"},
    {name = "ProfRandom92", email = "prof@comptext.dev"}
]
maintainers = [
    {name = "CompText Team", email = "team@comptext.dev"}
]
keywords = [
    "llm",
    "dsl",
    "parser",
    "token-optimization",
    "ai",
    "mcp",
    "comptext",
    "nlp"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.3"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.23.0"
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.82.0"
]

[project.urls]
Homepage = "https://github.com/ProfRandom92/comptext-codex"
Documentation = "https://profrandom92.github.io/comptext-docs"
Repository = "https://github.com/ProfRandom92/comptext-codex"
"Bug Tracker" = "https://github.com/ProfRandom92/comptext-codex/issues"
Changelog = "https://github.com/ProfRandom92/comptext-codex/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/ProfRandom92/comptext-codex"

[tool.setuptools]
packages = ["comptext"]

[tool.setuptools.package-data]
comptext = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=comptext --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["comptext"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
